# mcp-hydrolix

./: .env.e2e.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MAINTAINERS.md  README.md  brands.toml  docker-compose.yaml  hatch_build.py  package-lock.json  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/hooks/: block-clickhouse-pr.py
.github/: pull_request_template.md
.github/workflows/: publish-feature.yml  publish.yml  tests.yaml
_assistant/: README.md  litellm.local.yaml
_assistant/backend/: .gitignore  agent.local.yaml  pyproject.toml
_assistant/backend/src/ag_ui_langgraph/: agent.py  readme.md
_assistant/backend/src/hdx_agent/: __init__.py  agent.py  main.py  state.py
_assistant/backend/src/hdx_agent/config/: __init__.py  config.py  config2.py  log.py  log.yaml
_assistant/backend/src/hdx_agent/graphs/: __init__.py  db.py  entry.py  llm.py
_assistant/backend/src/hdx_agent/graphs/subgraphs/: __init__.py  error.py  explain.py  fix.py  react_query.py
_assistant/backend/src/hdx_agent/prompts/: __init__.py  templates.py
_assistant/backend/src/hdx_agent/tools/: __init__.py  clickhouse.py  mcp_hydrolix.py  mcp_hydrolix2.py  mcp_hydrolix3.py
_assistant/frontend/: package-lock.json  package.json  tsconfig.json
_assistant/frontend/app/: MyRuntimeProvider.tsx  extapps.ts
_assistant/frontend/components/assistant-ui/: attachment.tsx  iframe-panel.tsx  tool-fallback.tsx
_assistant/mcpapps/: package-lock.json  package.json  tsconfig.tsbuildinfo
_assistant/mcpapps/src/: extapps.ts  index.css
_assistant/mcpapps/src/components/assistant-ui/: attachment.tsx  tool-fallback.tsx
_ui/sandbox/: vite.config.ts
_ui/tschart/: package-lock.json  tsconfig.json  tsconfig.node.json
_ui/tschart/src/: index.css
_ui/tschart/src/components/Chart/: CustomTooltip.tsx
_ui/tschart/src/hooks/: useChartZoom.ts
docs/: CONFIG.md  adr-mcp-summary-table-handling.md  keycloak-mcp-client.json  oauth.md
docs/superpowers/plans/: 2026-03-31-mcp-server-refactor.md
docs/superpowers/specs/: 2026-03-31-mcp-server-refactor-design.md
mcp_hydrolix/: __init__.py  _brand.py  brand.py  column_analysis.py  logging_utils.py  main.py  mcp_env.py  mcp_server.py  metrics.py  middleware.py  models.py  pagination.py  query_analysis.py  sa_attribution.py  utilities.py  utils.py  webapp.py
mcp_hydrolix/auth/: __init__.py  credentials.py  mcp_providers.py  oauth.py
mcp_hydrolix/log/: __init__.py  log.py  log.yaml  utils.py
mcpb/: .mcpbignore  README.md  build.sh  manifest.json.tmpl  pyproject.toml.tmpl
mcpb/src/: server.py
openspec/: config.yaml
openspec/changes/admin-comment-version-transport/: .openspec.yaml  design.md  explore.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-28-admin-comment-version-transport/: proposal.md
openspec/changes/archive/2026-05-28-hydrolix-url-config-collapse/: tasks.md
openspec/changes/archive/2026-07-21-tp-brand-via-hatch-hook/: .openspec.yaml  design.md  tasks.md
openspec/changes/enrich-admin-comment/: proposal.md  tasks.md
openspec/changes/hydrolix-url-config-collapse/: design.md  proposal.md  tasks.md
openspec/changes/oauth-auth-chain-and-activation/: design.md  explore.md  proposal.md  tasks.md
openspec/changes/oauth-config-and-preflight/: design.md  explore.md  proposal.md  tasks.md
openspec/changes/oauth-jwt-verifier/: .openspec.yaml  design.md  explore.md  proposal.md  tasks.md
openspec/changes/oauth-log-redaction/: design.md  explore.md  proposal.md  tasks.md
openspec/changes/oauth-prototype-productionize/: .openspec.yaml  design.md  proposal.md
openspec/changes/oauth-resource-metadata/: design.md  explore.md  proposal.md  tasks.md
openspec/changes/tp-brand-via-hatch-hook/: design.md  explore.md  proposal.md  tasks.md
openspec/schemas/examples-first/: schema.yaml
openspec/schemas/examples-first/templates/: spec.md
openspec/schemas/interactive-spec-led/: schema.yaml
openspec/schemas/interactive-spec-led/templates/: design.md  discovery.md  explore.md  proposal.md  spec.md  tasks.md
openspec/specs/connection-config/: spec.md
openspec/specs/mcp-server-branding/: spec.md
openspec/specs/query-admin-comment/: spec.md
scripts/: brand_build.py  brand_meta.py  generate_vscode_install_urls.py
test-services/: docker-compose.yaml
tests/: .env  conftest.py  test_e2e_operator_gate.py  test_internal_deprecation_version_gate.py  test_log.py  test_mcp_env.py  test_mcp_env_deprecation.py  test_mcp_server.py  test_mcp_server_branding.py  test_metrics.py  test_middleware.py  test_models.py  test_pagination.py  test_pagination_integration.py  test_parameterized_queries.py  test_query_analysis.py  test_query_settings.py  test_sa_attribution.py  test_spawn_enforcement.py  test_summary_tables.py  test_tool.py  test_truststore.py  test_utils.py
tests/auth/: test_credential_chain.py  test_main_oauth_activation.py  test_oauth_activation.py  test_oauth_config.py  test_oauth_e2e.py  test_oauth_metadata.py  test_oauth_precedence.py  test_oauth_verifier.py  test_oauth_wiring.py
tests/e2e/: README.md  _kube.py  _mcp_client.py  build_and_push.sh  conftest.py  test_operator_tunables.py  test_smoke.py
ui/chat/: index.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/chat/src/: App.tsx
ui/chat/src/components/ui/: extapps.tsx  (+1 more)
ui/sandbox/: package-lock.json  package.json
ui/sandbox/src/: sandbox.ts
ui/tschart/: package.json  tailwind.config.js  tschart.html  vite.config.ts
ui/tschart/src/: App.tsx  main.tsx
ui/tschart/src/constants/: metrics.ts
ui/tschart/src/types/: index.ts
(+26 files in other folders)
