[project]
name = "mcp-hydrolix"
version = "0.1.7"
description = "An MCP server for Hydrolix."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
     "fastmcp>=2.14,<2.15",
     "python-dotenv>=1.1,<1.2",
     "clickhouse-connect>=0.10,<0.11",
     "pip-system-certs>=4.0,<5.0",
     "gunicorn>=23.0,<24.0",
     "pyjwt>=2.10,<2.11",
]

[project.scripts]
mcp-hydrolix = "mcp_hydrolix.main:main"

[project.urls]
Home = "https://github.com/hydrolix/mcp-hydrolix"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-repeat",
    "pre-commit",
    "mcp-clickhouse==0.1.13",
    "fastapi>=0.124",
]

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "_*",
]

[tool.hatch.build.targets.wheel]
artifacts = ["_ui/dist"]
packages = ["mcp_hydrolix"]

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [
    "cd _ui/sandbox/ && npm run build",
    "cd _ui/tschart/ && npm run build",
]

[tool.ruff]
line-length = 100
