[project]
name = "mcp-hydrolix"
version = "0.2.3"
description = "An MCP server for Hydrolix."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
     "fastmcp>=3.0.2,<3.3",
     "python-dotenv>=1.1,<1.2",
     "clickhouse-connect>=0.15,<0.16",
     "pip-system-certs>=4.0,<5.0",
     "certifi>=2026.1.4",
     "gunicorn>=23.0,<24.0",
     "pyjwt>=2.10,<2.13",
     "sqlglot>=26.0,<27.0",
     "prometheus-client>=0.21,<1.0",
]

[project.scripts]
mcp-hydrolix = "mcp_hydrolix.main:main"

[project.urls]
Home = "https://github.com/hydrolix/mcp-hydrolix"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    "mcp-clickhouse==0.1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_hydrolix"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
