[project]
name = "mcp-hydrolix"
version = "0.3.5"
# description, readme, scripts, and urls are brand-varying and populated by the
# custom metadata hook in hatch_build.py (default brand: hydrolix). project.name
# stays static because uv/PEP 621 forbid a dynamic name; the mcp-trafficpeak
# distribution is produced by the build hook repackaging the artifact.
dynamic = ["description", "readme", "scripts", "urls"]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.0,<3.4",
    "python-dotenv>=1.1,<1.3",
    "clickhouse-connect>=0.15,<0.16",
    "truststore>=0.10",
    "uvicorn[standard]>=0.34,<1.0",
    "pyjwt>=2.13.0,<3",
    "sqlglot>=26.0,<27.0",
    "prometheus-client>=0.21,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    "mcp-clickhouse==0.1.13",
    "kubernetes>=30,<32",
    "httpx>=0.27,<0.29",
]

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["mcp_hydrolix"]
# The committed mcp_hydrolix/_brand.py holds Hydrolix defaults for dev/editable
# installs; the build hook force-includes a freshly generated copy so the baked
# brand matches MCP_BRAND. Exclude the source copy to avoid a duplicate-path.
exclude = ["mcp_hydrolix/_brand.py"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration_clickhouse: tests that require a running ClickHouse/Hydrolix instance",
    "end_to_end: end-to-end tests that deploy to and exercise a live Hydrolix Kubernetes cluster",
    "brand_build: tests that shell out to build a brand wheel (slower; needs uv)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
